# ZLDB

./: CMakeLists.txt  README.md
include/: tool.h
lib/: READ
main/: CMakeLists.txt  main.cpp
main/segment/: READ.ME
main/tool/: CMakeLists.txt  tool.cpp
